# HICREST-Benchmark-Collection

./: .gitignore  .gitmodules  README.md
AXCCL/: README.md  compile.sh  configs.yaml  jobs_2nodes.yaml  jobs_2nodes_dev.yaml  jobs_2nodes_placement.yaml  jobs_collectives.yaml  jobs_collectives_no_placement.yaml  jobs_direct_launch.yaml  jobs_p2p.yaml  jobs_p2p_leonardo.yaml  jobs_p2p_no_placement.yaml  parse_results.py  plots.py  run_ensuring_placement.py
DLNetBench/: EXPERIMENTS.md  README.md  baseline_single_node.py  command_map.py  compact_csv.py  compile.sh  configs.yaml  configs_baseline.yaml  configs_concurrent.yaml  data_types.py  expand_baseline_single_node_experiments.py  expand_experiments.py  expand_hierarchical_experiments.py  experiments_generator.py  experiments_print.py  generate_jobs_sizes.py  jobs.yaml  jobs_concurrent_hierarchical.yaml  jobs_concurrent_nvl72.yaml  jobs_concurrent_uniform.yaml  jobs_no_placement.yaml  jobs_small_scale_placements.yaml  parse_raw_data.py  parse_results.py  parse_results_baseline.py  parse_results_concurrent.py  parsers.py  plot_commons.py  plot_scaling_and_breakdown.py  plot_slowdown.py  plots.ipynb  plots.py  plots_baselines.py  plots_concurrent.py  run_baselines_no_placement.py  run_baselines_placements.py  run_ensuring_placement.py  workerpool_scheduler.py
Graph500/: README.md  compile.sh  configs.yaml  jobs.yaml  jobs_bsc.yaml  parse_results.py  plots.py
HPCG/: Make.in  README.md  build_makefile.sh  configs.yaml  configs_nj.yaml  jobs.yaml  jobs_bsc.yaml  jobs_dev.yaml  jobs_nj.yaml  metrics.py  parse_results.py  plots.py  run_on_leonardo.py
HPCG/NVIDIA/: README.md  compile.sh  configs.yaml  jobs.yaml  parse_results.py  plots.py
HPCG/hpcg-cpu/: CMakeLists.txt  Makefile
HPCG/hpcg-cpu/src/: CG.cpp  CG.hpp  CG_ref.cpp  CheckProblem.cpp  ComputeDotProduct_ref.cpp  ComputeMG_ref.cpp  ComputeSPMV.cpp  ComputeSPMV.hpp  ComputeSPMV_ref.cpp  ComputeSPMV_ref.hpp  ComputeSYMGS_ref.cpp  ExchangeHalo.cpp  ExchangeHalo.hpp  GenerateGeometry.cpp  GenerateProblem_ref.cpp  OutputFile.cpp  ReportResults.cpp  SetupHalo_ref.cpp  (+5 more)
HPL/: README.md  compute_message_sizes.py  gen_dat_file.sh
HPL/NVIDIA/: README.md  compile.sh  configs.yaml  jobs.yaml
HPL/cpu-only/: Make.in  README.md  compile.sh  configs.yaml  jobs.yaml  parse_results.py  plots.py
KernelKmeans/: CMakeLists.txt  Makefile  README.md  compile.sh  configs.yaml  jobs_hca.yaml  parse_results.py  plots.py
KernelKmeans/include/: common.h  kernels.h  kernels_blas.hpp  kernels_openblas.hpp  kernels_openmp.hpp  kmeans.h  utils.hpp
KernelKmeans/src/: kernels_openblas.cpp  kernels_openmp.cpp  kmeans.cpp  main.cpp
MLLA/: Makefile  README.md  mlla  mlla.cpp
NPB/: compile.sh  config.yaml  jobs.yaml  make.def.THEA  parse_results.py
OpenMPbench/: Makefile  Makefile.defs.intel  README.md  compile.sh  jobs.yaml  parse_results.py  plot.py  syncbench.c
PointerChasing/: README.md  compile.sh  compile_hca_pioneer.sh  configs.yaml  jobs.yaml  jobs_hca.yaml  plots.py
PointerChasing/pointer-chasing/: Makefile  README.md  fused-linear-chase.cpp  fused-random-chase.cpp  linear-chase.cpp
RAJAPerf/: README.md  compile.sh  config.yaml  jobs.yaml
STREAM/: Makefile  README.md  campaign.yaml  compile.sh  compile.yaml  compile_hca_pioneer.sh  configs.yaml  jobs.yaml  jobs_baldo.yaml  jobs_brah.yaml  jobs_energy.yaml  jobs_hca.yaml  parse_results.py  parser.py  plots.json  plots.py  vars.yaml
STREAM/STREAM/: Makefile  README  stream.c
Workerpool/: pattern_1.json
common/: check_jobs.py  import_export.py  requirements_parsing.txt  requirements_plots.txt
common/campaigns/: shared_memory.yaml
common/compile/: compilers.sh  setup_job_placer.sh  utils.sh
common/constants/: plots.py  systems.py
common/energy/: ncm.py
common/run_scripts/: get_jobs_duration.py  run_ensuring_placement.py
common/sbm_configs/: shared_memory.yaml  shared_memory_vars.yaml
common/utils/: cli.py  plots.py  slurm.py  utils.py
demo/: README.md  configs.yaml  dlnetbench_graph500_campaign_demo.yaml  jobs_dlnetbench.yaml  jobs_graph500.yaml  show_results.py
locks/: FCFS.h  Harness.c  configs.yaml  jobs.yaml  jobs_hca.yaml  process_results.py  run1  runallMCSH
openmpbench_gcc/: arraybench_243.h  config.yaml  jobs_hca.yaml  parse.py
(+3 files in other folders)
